--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -10,7 +10,7 @@
 <body style="background-color: black; overflow: auto; margin: 0; padding: 0;">
 
 
-<div class="homeButton-wrapper" style="background-color: black;">
+<div class="homeButtonWrapper" style="background-color: black;">
     <button onclick="document.location='index.html'" class="homeButton"></button>
 </div>
 
