--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" type="text/css" href="stylesheet-nutrition.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <title>Ernährung</title>
 </head>
 <body>
 
-    <div class =".Top">
 
-        <div style ="background-color: black">
-            <button style ="float: left" onclick="document.location='index.html'" class ="homeButton"></button>
-            <img id="logo-nutrition" class="logo" src="icones/LOGO_05-remove.png" width=80 height=80 alt="Logo">
-        </div>
+
+    <div style ="background-color: black">
+        <button style ="float: left" onclick="document.location='index.html'" class ="homeButton"></button>
+        <img id="logoNutrition" class="logo" src="icones/LOGO_05-remove.png" width=80 height=80 alt="Logo">
     </div>
+
 
     <div class="content">
         <header class="hero">
@@ -22,7 +22,7 @@
             <p>Alles, was Sie wissen müssen, um eine ausgewogene und gesunde Ernährung zu erreichen.</p>
         </header>
         <main>
-            <section class="nutrition-intro">
+            <section class="nutritionIntro">
                 <h2>Was ist eine gesunde Ernährung?</h2>
                 <p>Eine gesunde Ernährung bedeutet, den Körper mit den richtigen Mengen an Nährstoffen zu versorgen, die er für Energie, Wachstum und Regeneration benötigt. Sie besteht aus einer ausgewogenen Kombination der drei Hauptnährstoffe:</p>
                 <ul>
@@ -44,7 +44,7 @@
                     <li><strong>Männer:</strong> 2.200–2.800 kcal</li>
                 </ul>
             </section>
-            <section class="balanced-diet">
+            <section class="balancedDiet">
                 <h2>Was ist eine ausgewogene Ernährung?</h2>
                 <p>Eine ausgewogene Ernährung umfasst alle wichtigen Nährstoffe in den richtigen Mengen, um den Körper gesund und leistungsfähig zu halten. Sie umfasst:</p>
                 <ul>
