--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -35,6 +35,10 @@
         </section>
     </main>
 </div>
+<div class="explanation">
+    <h2>Wieso Pläne für Ältere und Beeinträchtigte?</h2>
+    <p>Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
+</div>
 <footer>
     <p>&copy; 2024 Fitness und Gesundheit. Alle Rechte vorbehalten.</p>
 </footer>
