Added link for about us in main

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -102,7 +102,7 @@
    <table id = "tableInMain">
        <tr>
            <td class = "tdInMain"><p id = "@InTableInMain" style="padding-left: 10%">@ Fitness and Health 2024</p></td>
-           <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Über uns</td>
+           <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline"><a href = "about-us.html" class = "styleForEmailInMain">Über uns</a></td>
            <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Rechtliches</p></td>
            <td class = "tdInMain"><p class = "normalTextInTableInMain" style="text-decoration: underline">Folge uns auf</td>
        </tr>
