--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -28,6 +28,15 @@
             <div class="item3">
 
             </div>
+            <div class="item4">
+
+            </div>
+            <div class="item5">
+
+            </div>
+            <div class="item6">
+
+            </div>
         </div>
 
 </body>
