--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="stylesheet-nutrition.css">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
   <title>Ernährung</title>
 </head>
 <body>
@@ -11,7 +10,7 @@
 
 
     <div style ="background-color: black">
-        <button style ="float: left" onclick="document.location='index.html'" class ="homeButton"></button>
+        <button  onclick="document.location='index.html'" class ="homeButton"></button>
         <img id="logoNutrition" class="logo" src="icones/LOGO_05-remove.png" width=80 height=80 alt="Logo">
     </div>
 
