--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Shop</title>
     <link rel="stylesheet" type="text/css" href="stylesheet-shop.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body style = "background-color: black">
         <div class="homeButton-wrapper" style="background-color: black;">
@@ -18,7 +20,7 @@
                 <button id="searchButton">Search</button>
             </div>
         </div>
-        <div class="shop-items">
+        <!--<div class="shop-items">
             <div class="item1">
 
             </div>
@@ -37,7 +39,9 @@
             <div class="item6">
 
             </div>
-        </div>
+        </div>-->
+
+
 
 </body>
 </html>
