--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Shop</title>
     <link rel="stylesheet" type="text/css" href="stylesheet-shop.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
 
 </head>
-<body style = "background-color: black">
+<body class="index">
 <section>
     <div class = "Top">
         <br>
@@ -42,21 +42,22 @@
         <br>
 
     </div>
-
-    <div class="Top">
+    <div class = "Top">
         <br>
         <br>
 
     </div>
+
+
 </section>
-        <!--<div class="top">
+        <div class="top">
             <h1 class = "styleForHeader">Shop</h1>
             <div class="search">
                 <input type="text" id="searchInput" placeholder="Search...">
                 <button id="searchButton">Search</button>
             </div>
         </div>-->
-        <!--<div class="shop-items">
+        <div class="shop-items">
             <div class="item1">
 
             </div>
@@ -75,7 +76,7 @@
             <div class="item6">
 
             </div>
-        </div>-->
+        </div>
 
 
 
