--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -2,7 +2,9 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href ="stylesheet.css" type="text/css" rel ="stylesheet">
+
     <title>FitnessAndHealth</title>
 </head>
 <body class="index">
@@ -71,7 +73,7 @@
 
             <h2 class="quote2 set4">Stay positive, stay focused, and stay energized</h2>
             <h2 class="quote3 set4">The world is a stage, and all the actors must play their part</h2>
-            <h2 class="quote4 set4">The key to success is not to stop questioning, but to stop chasing the wrong answers</h2>
+            <h2 class="quote4 set4">The key to success is not to stop questioning, but stop chase the wrong answer</h2>
             <h2 class="quote5 set4">Believe in yourself, and you'll achieve great things</h2>
         </div>
         <div class="below">
