--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <section class="plans">
-            <h2>Pläne für älterece Menschen</h2>
+            <h2>Pläne für ältere Menschen</h2>
             <p>Sanfte Übungen, um Mobilität, Kraft und Wohlbefinden zu verbessern:</p>
             <ul>
                 <li><strong>Gelenkfreundliches Training:</strong> Schonende Bewegungen, um die Gelenke zu entlasten.</li>
