--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Shop</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet-shop.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="stylesheet-shop.css">
+
 
 </head>
 <body class="index">
@@ -20,20 +21,20 @@
 
         <button class ="TopButtons" title ="Besuche unseren Shop" onclick="document.location='shop.html'"><img src="icones/bx-shopping-bag.svg" alt="">Shop</button>
 
-        <div class="container">
+        <div class="custom-container">
             <hr class="vertikalLine">
         </div>
 
         <button class="TopButtons" onclick="document.location = 'nutrition.html'" title="Gehe zu unseren Ernährungsplänen"><img src="icones/bx-baguette.svg" alt="">Ernährungspläne</button>
 
 
-        <div class="container">
+        <div class="custom-container">
             <hr class="vertikalLine">
         </div>
 
         <button class="TopButtons" title="Gehe zu unseren Trainingsplänen" onclick="document.location ='trainings-plan.html'"><img src="icones/bx-run.svg" alt="">Trainingspläne</button>
 
-        <div class="container">
+        <div class="custom-container">
             <hr class="vertikalLine">
         </div>
         <button class="TopButtons" onclick="document.location = 'about-us.html'" title="Über uns"><img src="icones/bxs-group.svg" alt="">Über uns</button>
