changed from div to nav

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -9,11 +9,11 @@
 </head>
 <body class="index">
     <section>
-    <div class = "Top">
+    <nav class = "Top">
         <br>
         <br>
 
-    </div>
+    </nav>
     <nav class="Top">
 
         <img class="logo" src="icones/LOGO_05-remove.png" width=80 height=80 alt="Logo">
@@ -43,11 +43,11 @@
 
     </nav>
 
-    <div class="Top">
+    <nav class="Top">
     <br>
     <br>
 
-    </div>
+    </nav>
     </section>
 
     <div class="MainPage">
