--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -3,12 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Trainingspläne</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-training-plans.css">
 </head>
 <body>
-<div class="homeButton-wrapper">
+
+
+<div class="homeButton-wrapper position-relative">
     <button onclick="document.location='index.html'" class="homeButton"></button>
+    <div class="sidebar d-flex flex-column p-3">
+        <ul class="nav flex-column">
+            <li class="nav-item"><a href="index.html" class="nav-link">Trainingspläne</a></li>
+            <li class="nav-item"><a href="nutrition.html" class="nav-link">Ernährung</a></li>
+            <li class="nav-item"><a href="about-us.html" class="nav-link">Über uns</a></li>
+        </ul>
+    </div>
 </div>
+
+
+
+
 <div class="content">
     <header class="hero">
         <h1 id="title">Trainingspläne</h1>
