--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -8,53 +8,56 @@
 </head>
 <body>
 
-
-<div class="homeButton-wrapper position-relative">
-    <button onclick="document.location='index.html'" class="homeButton"></button>
-    <div class="sidebar d-flex flex-column p-3">
-        <ul class="nav flex-column">
-            <li class="nav-item"><a href="index.html" class="nav-link">Trainingspläne</a></li>
-            <li class="nav-item"><a href="nutrition.html" class="nav-link">Ernährung</a></li>
-            <li class="nav-item"><a href="about-us.html" class="nav-link">Über uns</a></li>
-        </ul>
+<section class="toFixflex position-relative">
+    <div class="homeButton-wrapper position-relative">
+        <button onclick="document.location='index.html'" class="homeButton border-0 bg-transparent p-0"> <img src="icones/LOGO_05-remove.png" class="picture" alt="logo"> </button>
+        <div class="sidebar d-flex flex-column p-3">
+            <ul class="nav flex-column">
+                <li class="nav-item"><a href="index.html" class="nav-link">Home page</a></li>
+                <li class="nav-item"><a href="nutrition.html" class="nav-link">Ernährung</a></li>
+                <li class="nav-item"><a href="about-us.html" class="nav-link">Über uns</a></li>
+            </ul>
+        </div>
     </div>
-</div>
 
 
 
 
-<div class="content">
-    <header class="hero">
-        <h1 id="title">Trainingspläne</h1>
-        <p>Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und Wohlbefinden zu fördern.</p>
-    </header>
-    <main>
-        <section class="plans">
-            <h2>Pläne für ältere Menschen</h2>
-            <p>Sanfte Übungen, um Mobilität, Kraft und Wohlbefinden zu verbessern:</p>
-            <ul>
-                <li><strong>Gelenkfreundliches Training:</strong> Schonende Bewegungen, um die Gelenke zu entlasten.</li>
-                <li><strong>Balance-Übungen:</strong> Fördert die Standfestigkeit und Sturzprophylaxe.</li>
-                <li><strong>Leichtes Krafttraining:</strong> Unterstützt den Erhalt der Muskelgesundheit.</li>
-            </ul>
-        </section>
-        <section class="plans">
-            <h2>Pläne für beeinträchtigte Menschen</h2>
-            <p>Individuell angepasste Übungen, die verschiedene Einschränkungen berücksichtigen:</p>
-            <ul>
-                <li><strong>Stuhlübungen:</strong> Übungen, die im Sitzen durchgeführt werden können.</li>
-                <li><strong>Mobilitätstraining:</strong> Hilft, die Bewegungsfreiheit zu verbessern.</li>
-                <li><strong>Individuelle Anpassungen:</strong> Programme, die speziell auf die Bedürfnisse abgestimmt sind.</li>
-            </ul>
-        </section>
-    </main>
-</div>
-<div class="explanation">
-    <h2>Wieso Pläne für Ältere und Beeinträchtigte?</h2>
-    <p>Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
-</div>
-<footer>
-    <p>&copy; 2024 Fitness und Gesundheit. Alle Rechte vorbehalten.</p>
-</footer>
+    <div class="content">
+        <header class="hero">
+            <h1 id="title">Trainingspläne</h1>
+            <p>Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und Wohlbefinden zu fördern.</p>
+        </header>
+        <main>
+            <section class="plans">
+                <h2>Pläne für ältere Menschen</h2>
+                <p>Sanfte Übungen, um Mobilität, Kraft und Wohlbefinden zu verbessern:</p>
+                <ul>
+                    <li><strong>Gelenkfreundliches Training:</strong> Schonende Bewegungen, um die Gelenke zu entlasten.</li>
+                    <li><strong>Balance-Übungen:</strong> Fördert die Standfestigkeit und Sturzprophylaxe.</li>
+                    <li><strong>Leichtes Krafttraining:</strong> Unterstützt den Erhalt der Muskelgesundheit.</li>
+                </ul>
+            </section>
+            <section class="plans">
+                <h2>Pläne für beeinträchtigte Menschen</h2>
+                <p>Individuell angepasste Übungen, die verschiedene Einschränkungen berücksichtigen:</p>
+                <ul>
+                    <li><strong>Stuhlübungen:</strong> Übungen, die im Sitzen durchgeführt werden können.</li>
+                    <li><strong>Mobilitätstraining:</strong> Hilft, die Bewegungsfreiheit zu verbessern.</li>
+                    <li><strong>Individuelle Anpassungen:</strong> Programme, die speziell auf die Bedürfnisse abgestimmt sind.</li>
+                </ul>
+            </section>
+        </main>
+    </div>
+</section>
+    <div class="explanation">
+        <h2>Wieso Pläne für Ältere und Beeinträchtigte?</h2>
+        <p>Die Bedürfnisse älterer Menschen und beeinträchtigter Personen unterscheiden sich häufig von denen jüngerer oder gesunder Personen. Individuelle Trainingspläne helfen dabei, Mobilität, Kraft und Lebensqualität zu fördern, während Verletzungen und Überbelastungen vermieden werden. Es ist wichtig, diese Gruppen zu unterstützen, um einen aktiven und gesunden Lebensstil zu gewährleisten.</p>
+    </div>
+    <footer>
+        <p>&copy; 2024 Fitness und Gesundheit. Alle Rechte vorbehalten.</p>
+    </footer>
+
+
 </body>
 </html>
