added icons to the sidebar

--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -13,9 +13,24 @@
         <button onclick="document.location='index.html'" class="homeButton border-0 bg-transparent p-0"> <img src="icones/LOGO_05-remove.png" class="picture" alt="logo"> </button>
         <div class="sidebar d-flex flex-column p-3">
             <ul class="nav flex-column">
-                <li class="nav-item"><a href="index.html" class="nav-link">Home page</a></li>
-                <li class="nav-item"><a href="nutrition.html" class="nav-link">Ernährung</a></li>
-                <li class="nav-item"><a href="about-us.html" class="nav-link">Über uns</a></li>
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link d-flex align-items-center">
+                        <img src="icones/LOGO_05-remove.png"  alt="home"  class="icon me-2">
+                        Home page
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="nutrition.html" class="nav-link d-flex align-items-center">
+                        <img src="icones/bx-baguette.svg" alt="nutrition" class="icon me-2">
+                        Ernährung
+                    </a>
+                </li>
+                <li class="nav-link">
+                    <a href="about-us.html" class="nav-link d-flex align-items-center">
+                        <img src="icones/bxs-group.svg" alt="about us" class="icon me-2">
+                        Über uns
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
