tryed to make sidebar prittier

--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -10,12 +10,14 @@
 
 <section class="toFixflex position-relative">
     <div class="homeButton-wrapper position-relative">
-        <button onclick="document.location='index.html'" class="homeButton border-0 bg-transparent p-0"> <img src="icones/LOGO_05-remove.png" class="picture" alt="logo"> </button>
-        <div class="sidebar d-flex flex-column p-3">
+        <button onclick="document.location='index.html'" class="homeButton border-0 bg-transparent p-0">
+            <img src="icones/LOGO_05-remove.png" class="picture" alt="logo">
+        </button>
+        <div class="sidebar d-flex flex-column p-4">
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <a href="index.html" class="nav-link d-flex align-items-center">
-                        <img src="icones/LOGO_05-remove.png"  alt="home"  class="icon me-2">
+                        <img src="icones/LOGO_05-remove.png" alt="home" class="icon me-2">
                         Home page
                     </a>
                 </li>
@@ -25,7 +27,7 @@
                         Ernährung
                     </a>
                 </li>
-                <li class="nav-link">
+                <li class="nav-item">
                     <a href="about-us.html" class="nav-link d-flex align-items-center">
                         <img src="icones/bxs-group.svg" alt="about us" class="icon me-2">
                         Über uns
