--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -17,26 +17,19 @@
     <nav class="Top">
 
         <img class="logo" src="icones/LOGO_05-remove.png" width=80 height=80 alt="Logo">
-
-        <button class ="TopButtons" title ="Besuche unseren Shop" onclick="document.location='shop.html'"><img src="icones/bx-shopping-bag.svg" alt="">Shop</button>
-
-        <div class="custom-container">
-            <hr class="vertikalLine">
-        </div>
-
-        <button class="TopButtons" onclick="document.location = 'nutrition.html'" title="Gehe zu unseren Ernährungsplänen"><img src="icones/bx-baguette.svg" alt="">Ernährungspläne</button>
+        
+        <button class ="TopButtons" title ="Besuche unseren Shop" onclick="document.location='shop.html'"><img src="icones/bx-shopping-bag.svg" alt="" style = "padding-bottom: 10%">Shop</button>
 
 
-        <div class="custom-container">
-            <hr class="vertikalLine">
-        </div>
 
-        <button class="TopButtons" title="Gehe zu unseren Trainingsplänen" onclick="document.location ='trainings-plan.html'"><img src="icones/bx-run.svg" alt="">Trainingspläne</button>
+        <button class="TopButtons" onclick="document.location = 'nutrition.html'" title="Gehe zu unseren Ernährungsplänen"><img src="icones/bx-baguette.svg" alt="" style = "padding-bottom: 3%">Ernährungspläne</button>
 
-        <div class="custom-container">
-            <hr class="vertikalLine">
-        </div>
-        <button class="TopButtons" onclick="document.location = 'about-us.html'" title="Über uns"><img src="icones/bxs-group.svg" alt="">Über uns</button>
+
+
+        <button class="TopButtons" title="Gehe zu unseren Trainingsplänen" onclick="document.location ='trainings-plan.html'"><img src="icones/bx-run.svg" alt="" style="padding-bottom: 3%">Trainingspläne</button>
+
+
+        <button class="TopButtons" onclick="document.location = 'about-us.html'" title="Über uns"><img src="icones/bxs-group.svg" alt="" style = "padding-bottom: 3%">Über uns</button>
 
         <br>
         <br>
