Fixed Sidebar so that it only appers when I hover over the home button

--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -9,7 +9,7 @@
 <body>
 
 
-<div class="homeButton-wrapper position-relative">
+<div class="homeButton-wrapper position-relative" style = "float: left">
     <button class="homeButton"></button>
     <div class="sidebar d-flex flex-column p-4">
         <ul class="nav flex-column">
@@ -24,7 +24,7 @@
 
 
 
-<div class="content">
+<div class="content" style = "clear: left">
     <header class="hero">
         <h1 id="title">Trainingspläne</h1>
         <p>Individuelle Trainingspläne für ältere Menschen und Personen mit Beeinträchtigungen, um Gesundheit und Wohlbefinden zu fördern.</p>
