--- a/fitness-and-health-website/trainings-plan.html
+++ b/fitness-and-health-website/trainings-plan.html
@@ -9,9 +9,9 @@
 <body>
 
 
-<div class="homeButton-wrapper position-relative" style = "float: left">
+<div class="homeButton-wrapper position-relative" style = "float: left;">
     <button class="homeButton"></button>
-    <div class="sidebar d-flex flex-column p-4">
+    <div class="sidebar d-flex flex-column p-4" style="background-color: black; border-right: 3px solid yellow">
         <ul class="nav flex-column">
 
             <li class="nav-item li-items-in-sidebar"><a href="index.html" class="nav-link text-in-sidebar">Startseite</a></li>
