Added the sidebar to every side page and fixed littel bugs so that the sidebar works with no errors

--- a/fitness-and-health-website/index.html
+++ b/fitness-and-health-website/index.html
@@ -44,7 +44,7 @@
     </section>
 
     <div class="MainPage">
-        <div id="headlinetrans">
+        <div style = "margin-top: 2%; margin-bottom: 2%">
             <h1 class="headLine">Deine Fitnessreise beginnt</h1>
         </div>
 
