--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -2,18 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-nutrition.css">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+
   <title>Ernährung</title>
 </head>
 <body>
 
 
 
-    <div style ="background-color: black">
-        <button style ="float: left" onclick="document.location='index.html'" class ="homeButton"></button>
-        <img id="logoNutrition" class="logo" src="icones/LOGO_05-remove.png" width=80 height=80 alt="Logo">
+<div class="homeButton-wrapper position-relative" style = "float: left;">
+    <button class="homeButton"></button>
+    <div class="sidebar d-flex flex-column p-4" style="background-color: black; border-right: 3px solid yellow">
+        <ul class="nav flex-column">
+
+            <li class="nav-item li-items-in-sidebar"><a href="index.html" class="nav-link text-in-sidebar">Startseite</a></li>
+            <li class="nav-item li-items-in-sidebar"><a href="shop.html" class="nav-link text-in-sidebar">Shop</a></li>
+            <li class="nav-item li-items-in-sidebar"><a href="trainings-plan.html" class="nav-link text-in-sidebar">Training</a></li>
+            <li class="nav-item li-items-in-sidebar"><a href="about-us.html" class="nav-link text-in-sidebar">Über uns</a></li>
+        </ul>
     </div>
+</div>
 
 
     <div class="content">
