--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -9,49 +9,24 @@
 
 </head>
 <body class="index">
-<section>
-    <div class = "Top">
-        <br>
-        <br>
 
+
+<div class="homeButton-wrapper position-relative" style = "float: left;">
+    <button class="homeButton"></button>
+    <div class="sidebar d-flex flex-column p-4" style="background-color: black; border-right: 3px solid yellow">
+        <ul class="nav flex-column">
+
+            <li class="nav-item li-items-in-sidebar"><a href="index.html" class="nav-link text-in-sidebar">Startseite</a></li>
+            <li class="nav-item li-items-in-sidebar"><a href="trainings-plan.html" class="nav-link text-in-sidebar">Training</a></li>
+            <li class="nav-item li-items-in-sidebar"><a href="nutrition.html" class="nav-link text-in-sidebar">Ernährung</a></li>
+            <li class="nav-item li-items-in-sidebar"><a href="about-us.html" class="nav-link text-in-sidebar">Über uns</a></li>
+        </ul>
     </div>
-    <div class="Top">
-
-        <img class="logo" src="icones/LOGO_05-remove.png" width=80 height=80 alt="Logo">
-
-        <button class ="TopButtons" title ="Besuche unseren Shop" onclick="document.location='shop.html'"><img src="icones/bx-shopping-bag.svg" alt="">Shop</button>
-
-        <div class="custom-container">
-            <hr class="vertikalLine">
-        </div>
-
-        <button class="TopButtons" onclick="document.location = 'nutrition.html'" title="Gehe zu unseren Ernährungsplänen"><img src="icones/bx-baguette.svg" alt="">Ernährungspläne</button>
+</div>
 
 
-        <div class="custom-container">
-            <hr class="vertikalLine">
-        </div>
 
-        <button class="TopButtons" title="Gehe zu unseren Trainingsplänen" onclick="document.location ='trainings-plan.html'"><img src="icones/bx-run.svg" alt="">Trainingspläne</button>
-
-        <div class="custom-container">
-            <hr class="vertikalLine">
-        </div>
-        <button class="TopButtons" onclick="document.location = 'about-us.html'" title="Über uns"><img src="icones/bxs-group.svg" alt="">Über uns</button>
-
-        <br>
-        <br>
-
-    </div>
-    <div class = "Top">
-        <br>
-        <br>
-
-    </div>
-
-
-</section>
-        <div class="top">
+        <div style="clear: left">
             <h1 class = "styleForHeader">Shop</h1>
             <div class="search">
                 <input type="text" id="searchInput" placeholder="Search...">
