--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -26,7 +26,7 @@
 </div>
 
 
-<h2 class="headersInAboutUs">Wer sind wir</h2>
+<h2 class="headersInAboutUs">Wer sind wir?</h2>
 
 
     <table class = "tableStyleInAboutUs">
