tried to put in first product in shop to look up how the products should be ordered/designed

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -23,17 +23,34 @@
         </ul>
     </div>
 </div>
+<h1 class="page_header">Shop</h1>
 
 
 
-        <div style="clear: left">
+        <main class="col-md-9">
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                    <div class="card h-100">
+                        <img src="icones/vanille-shake.jpg" class="card-img-top" alt="Protein Shake - Vanille">
+                        <div class="card-body">
+                            <h5 class="card-title">Protein Shake - Vanille</h5>
+                            <p class="card-text"><strong>€19.99</strong></p>
+                            <a href="#" class="btn btn-primary">In den Warenkorb</a>
+                        </div>
+                    </div>
+                </div>
+                ...
+            </div>
+        </main>
+
+        <!--<div style="clear: left">
             <h1 class = "styleForHeader">Shop</h1>
             <div class="search">
                 <input type="text" id="searchInput" placeholder="Search...">
                 <button id="searchButton">Search</button>
             </div>
         </div>-->
-        <div class="shop-items">
+        <!--<div class="shop-items">
             <div class="item1">
 
             </div>
@@ -52,7 +69,7 @@
             <div class="item6">
 
             </div>
-        </div>
+        </div>-->
 
 
 
