added a second product and compressed the picture to make it look better

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -27,21 +27,35 @@
 
 
 
-        <main class="col-md-9">
-            <div class="row row-cols-1 row-cols-md-3 g-4">
-                <div class="col">
-                    <div class="card h-100">
-                        <img src="icones/vanille-shake.jpg" class="card-img-top" alt="Protein Shake - Vanille">
-                        <div class="card-body">
-                            <h5 class="card-title">Protein Shake - Vanille</h5>
-                            <p class="card-text"><strong>€19.99</strong></p>
-                            <a href="#" class="btn btn-primary">In den Warenkorb</a>
-                        </div>
-                    </div>
+<div class="container my-5">
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+
+        <div class="col">
+            <div class="card h-100 fixed-height">
+                <img src="icones/vanille-shake.jpg" class="card-img-top img-compress" alt="Protein Shake - Vanille">
+                <div class="card-body">
+                    <h5 class="card-title">Protein Shake - Vanille</h5>
+                    <p class="card-text">Perfekt für Muskelaufbau.</p>
+                    <p class="card-text"><strong>€19.99</strong></p>
+                    <a href="#" class="btn btn-primary">In den Warenkorb</a>
                 </div>
-                ...
             </div>
-        </main>
+        </div>
+
+
+        <div class="col">
+            <div class="card h-100 fixed-height">
+                <img src="icones/ErnadPhoto.jpg" class="card-img-top img-compress" alt="Hanteln - 20kg Set">
+                <div class="card-body">
+                    <h5 class="card-title">Hanteln - 20kg Set</h5>
+                    <p class="card-text">Perfekt für Fitness und Krafttraining zu Hause. Mit rutschfestem Griff und anpassbaren Gewichten.</p>
+                    <p class="card-text"><strong>€49.99</strong></p>
+                    <a href="#" class="btn btn-primary">In den Warenkorb</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
         <!--<div style="clear: left">
             <h1 class = "styleForHeader">Shop</h1>
