Try to insert a picture to the shop page to design it prettier and more natural

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -10,22 +10,23 @@
 </head>
 <body class="index">
 
+<div class="fixed-top-bar">
+    <div class="homeButton-wrapper position-relative" style = "float: left;">
+        <button class="homeButton"></button>
+        <div class="sidebar d-flex flex-column p-4" style="background-color: black; border-right: 3px solid yellow">
+            <ul class="nav flex-column">
 
-<div class="homeButton-wrapper position-relative" style = "float: left;">
-    <button class="homeButton"></button>
-    <div class="sidebar d-flex flex-column p-4" style="background-color: black; border-right: 3px solid yellow">
-        <ul class="nav flex-column">
-
-            <li class="nav-item li-items-in-sidebar"><a href="index.html" class="nav-link text-in-sidebar">Startseite</a></li>
-            <li class="nav-item li-items-in-sidebar"><a href="trainings-plan.html" class="nav-link text-in-sidebar">Training</a></li>
-            <li class="nav-item li-items-in-sidebar"><a href="nutrition.html" class="nav-link text-in-sidebar">Ernährung</a></li>
-            <li class="nav-item li-items-in-sidebar"><a href="about-us.html" class="nav-link text-in-sidebar">Über uns</a></li>
-        </ul>
+                <li class="nav-item li-items-in-sidebar"><a href="index.html" class="nav-link text-in-sidebar">Startseite</a></li>
+                <li class="nav-item li-items-in-sidebar"><a href="trainings-plan.html" class="nav-link text-in-sidebar">Training</a></li>
+                <li class="nav-item li-items-in-sidebar"><a href="nutrition.html" class="nav-link text-in-sidebar">Ernährung</a></li>
+                <li class="nav-item li-items-in-sidebar"><a href="about-us.html" class="nav-link text-in-sidebar">Über uns</a></li>
+            </ul>
+        </div>
     </div>
+    <h1 class="page_header">Shop</h1>
 </div>
-<h1 class="page_header">Shop</h1>
 
-
+<img src="icones/shop-picture.jpg" class="img-fluid d-block mx-auto shop-picture">
 
 <div class="container my-5">
     <div class="row row-cols-1 row-cols-md-3 g-4">
