I fixed the top bar in the shop page so that if you scroll down you still can switch easily to the other pages

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -26,7 +26,10 @@
     <h1 class="page_header">Shop</h1>
 </div>
 
-<img src="icones/shop-picture.jpg" class="img-fluid d-block mx-auto shop-picture">
+<div class="image-container">
+    <img src="icones/shop-picture.jpg" class="img-fluid d-block mx-auto shop-picture">
+</div>
+
 
 <div class="container my-5">
     <div class="row row-cols-1 row-cols-md-3 g-4">
