Picture on shop page finished + the pictures headers also added

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -27,7 +27,15 @@
 </div>
 
 <div class="image-container">
-    <img src="icones/shop-picture.jpg" class="img-fluid d-block mx-auto shop-picture">
+    <img src="icones/shop-picture.jpg" class="img-fluid">
+    <div class="image-text">
+        <h1 class="picture-header">
+            Willkommen
+        </h1>
+        <h2 class="picture-subheader">
+            Fitness&Health Shop
+        </h2>
+    </div>
 </div>
 
 
