Added description and border for the following products on the shop page

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -37,7 +37,11 @@
         </h2>
     </div>
 </div>
-
+<br>
+<br>
+<br>
+<h1 style="text-align: center; color: #D3D3D3">Products</h1>
+<hr class="bg-warning" style="height: 0.5rem;">
 
 <div class="container my-5">
     <div class="row row-cols-1 row-cols-md-3 g-4">
