added a shopping cart in the right top, scaled the picture because it occoured too big.

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -24,10 +24,11 @@
         </div>
     </div>
     <h1 class="page_header">Shop</h1>
+    <img src="icones/shopping-cart.png" class="shopping-cart" title="Warenkorb">
 </div>
 
 <div class="image-container">
-    <img src="icones/shop-picture.jpg" class="img-fluid">
+    <img src="icones/shop-picture.jpg" class="img">
     <div class="image-text">
         <h1 class="picture-header">
             Willkommen
