Added two new files for the shopping basket and made an onclick function so you can get there also I override some language mistakes from the shop side

--- a/fitness-and-health-website/shop.html
+++ b/fitness-and-health-website/shop.html
@@ -26,7 +26,7 @@
     </div>
     <h1 class="page_header">Shop</h1>
     <form class="d-flex">
-    <button class="btn btn-outline-light" type="submit">
+    <button class="btn btn-outline-light" type = "submit" onclick="event.preventDefault(); document.location = 'shopping-basket.html'">
         <img src="icones/shopping-cart.png">
         Cart
         <span class="badge bg-black text-white ms-1 rounded-pill">0</span>
@@ -50,7 +50,7 @@
 <br>
 <br>
 <br>
-<h1 style="text-align: center; color: #D3D3D3">Products</h1>
+<h1 style="text-align: center; color: #D3D3D3">Produkte</h1>
 <hr class="bg-warning" style="height: 0.5rem;">
 
 <!--<div class="container my-5">
