--- a/fitness-and-health-website/about-us.html
+++ b/fitness-and-health-website/about-us.html
@@ -3,17 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="stylesheet-about-us.css">
     <title>Über uns</title>
 </head>
 <body style="background-color: black; overflow: auto; margin: 0; padding: 0;">
 
 
-<div class="homeButtonWrapper" style="background-color: black;">
-    <button onclick="document.location='index.html'" class="homeButton"></button>
+<div class="homeButton-wrapper position-relative" style = "float: left;">
+    <button class="homeButton"></button>
+    <div class="sidebar d-flex flex-column p-4" style="background-color: black; border-right: 3px solid yellow">
+        <ul class="nav flex-column">
+            <li class="nav-item li-items-in-sidebar"><a href="index.html" class="nav-link text-in-sidebar">Startseite</a></li>
+            <li class="nav-item li-items-in-sidebar"><a href="shop.html" class="nav-link text-in-sidebar">Shop</a></li>
+            <li class="nav-item li-items-in-sidebar"><a href="trainings-plan.html" class="nav-link text-in-sidebar">Training</a></li>
+            <li class="nav-item li-items-in-sidebar"><a href="nutrition.html" class="nav-link text-in-sidebar">Ernährung</a></li>
+        </ul>
+    </div>
 </div>
-
 
 <h2 class="headersInAboutUs">Wer sind wir</h2>
 
