added another section

--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -55,6 +55,29 @@
             <li><strong>Männer:</strong> 2.200–2.800 kcal</li>
         </ul>
     </section>
+    <!-- Section 2: Was ist eine ausgewogene Ernährung? -->
+    <section class="section">
+        <h2>Was ist eine ausgewogene Ernährung?</h2>
+        <p>
+            Eine ausgewogene Ernährung bedeutet, dass alle wichtigen Nährstoffe in den richtigen Mengen aufgenommen werden, um den Körper gesund und leistungsfähig zu halten. Sie umfasst:
+        </p>
+        <ul>
+            <li><strong>Kohlenhydrate:</strong> Hauptenergiequelle, besonders wichtig für Gehirn und Muskeln. <em>Beispiele:</em> Vollkornprodukte, Kartoffeln, Obst, Gemüse.</li>
+            <li><strong>Proteine:</strong> Benötigt für Wachstum, Reparatur von Gewebe und Muskelaufbau. <em>Beispiele:</em> Fleisch, Fisch, Eier, Hülsenfrüchte, Milchprodukte.</li>
+            <li><strong>Fette:</strong> Essenziell für Energie, Zellfunktionen und die Aufnahme fettlöslicher Vitamine (A, D, E, K). <em>Beispiele:</em> Avocados, Nüsse, Olivenöl, fetter Fisch.</li>
+            <li><strong>Vitamine und Mineralstoffe:</strong> Wichtig für das Immunsystem, den Stoffwechsel und andere Körperfunktionen. <em>Beispiele:</em> Obst, Gemüse, Nüsse, Samen.</li>
+            <li><strong>Wasser:</strong> Unerlässlich für alle Körperfunktionen, wie die Regulierung der Körpertemperatur und den Transport von Nährstoffen. <em>Empfehlung:</em> 2–3 Liter pro Tag.</li>
+        </ul>
+        <p>
+            <strong>Grundregeln für eine ausgewogene Ernährung:</strong>
+        </p>
+        <ol>
+            <li><strong>Vielfalt:</strong> Jeden Tag verschiedene Lebensmittelgruppen essen.</li>
+            <li><strong>Portionen:</strong> Achte auf die richtige Menge, um Über- oder Unterernährung zu vermeiden.</li>
+            <li><strong>Frische Produkte:</strong> Frische und unverarbeitete Lebensmittel bevorzugen.</li>
+            <li><strong>Ausgewogenheit:</strong> Keiner der drei Makronährstoffe (Kohlenhydrate, Proteine, Fette) sollte übermäßig oder zu wenig konsumiert werden.</li>
+        </ol>
+    </section>
 
 </div>
 </body>
