added the two last sections

--- a/fitness-and-health-website/nutrition.html
+++ b/fitness-and-health-website/nutrition.html
@@ -79,6 +79,58 @@
         </ol>
     </section>
 
+    <!-- Section 3: Bulking und Cutting -->
+    <section class="section">
+        <h2>Bulking und Cutting</h2>
+        <p>
+            Beide Strategien werden häufig im Fitnessbereich eingesetzt, um bestimmte Ziele zu erreichen:
+        </p>
+        <h3>Bulking:</h3>
+        <p>
+            Beim Bulking wird der Körper in einen Kalorienüberschuss versetzt, indem man mehr Kalorien zu sich nimmt als verbraucht. Ziel ist es, Gewicht zuzunehmen und Muskelmasse aufzubauen.
+        </p>
+        <p>
+            <strong>Empfohlene Lebensmittel beim Bulking:</strong>
+        </p>
+        <ul>
+            <li>Haferflocken (ca. 68 kcal pro 100 g)</li>
+            <li>Reis (ca. 130 kcal pro 100 g gekocht)</li>
+            <li>Hähnchenbrust (ca. 165 kcal pro 100 g)</li>
+            <li>Lachs (ca. 206 kcal pro 100 g)</li>
+            <li>Nüsse wie Mandeln (ca. 576 kcal pro 100 g)</li>
+        </ul>
+        <h3>Cutting:</h3>
+        <p>
+            Beim Cutting geht es darum, Gewicht zu reduzieren, indem man weniger Kalorien zu sich nimmt als der Körper benötigt. Dabei soll möglichst viel Muskelmasse erhalten bleiben.
+        </p>
+        <p>
+            <strong>Empfohlene Lebensmittel beim Cutting:</strong>
+        </p>
+        <ul>
+            <li>Zucchini (ca. 17 kcal pro 100 g)</li>
+            <li>Brokkoli (ca. 34 kcal pro 100 g)</li>
+            <li>Magerquark (ca. 67 kcal pro 100 g)</li>
+            <li>Hähnchenbrust (ca. 165 kcal pro 100 g)</li>
+            <li>Linsen (ca. 116 kcal pro 100 g gekocht)</li>
+        </ul>
+    </section>
+
+    <!-- Section 4: Was sind Makronährstoffe? -->
+    <section class="section">
+        <h2>Was sind Makronährstoffe?</h2>
+        <p>
+            Makronährstoffe sind die Grundbausteine unserer Ernährung. Jeder von ihnen hat eine spezifische Rolle:
+        </p>
+        <ol>
+            <li><strong>Kohlenhydrate:</strong> Hauptenergiequelle des Körpers. <em>Beispiele:</em> Vollkornprodukte, Obst, Gemüse.</li>
+            <li><strong>Eiweiße:</strong> Notwendig für den Aufbau und Erhalt von Muskeln sowie für die Reparatur von Gewebe. <em>Beispiele:</em> Fleisch, Fisch, Eier, Hülsenfrüchte.</li>
+            <li><strong>Fette:</strong> Essenziell für die Energieversorgung, den Zellaufbau und die Hormonproduktion. <em>Beispiele:</em> Avocados, Olivenöl, Nüsse, Samen.</li>
+        </ol>
+        <p>
+            Eine ausgewogene Kombination dieser Nährstoffe unterstützt die allgemeine Gesundheit, fördert die Fitness und hilft, persönliche Ziele wie Muskelaufbau oder Fettabbau zu erreichen.
+        </p>
+    </section>
+
 </div>
 </body>
 </html>
